fixing of header display on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,25 @@
 @import "../../../styles/variables.module.scss";
 
 .header {
-  display: flex;
-  width: 100vw;
-  justify-content: space-between;
-  padding: 20px 5%;
-  background-color: $primaryDarkColor;
-
+  .nav-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .mobile-menu-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    .links-container {
+      display: flex;
+      align-items: center;
+    }
+  }
   nav {
     display: flex;
     flex-direction: row;
